# deezer-rs

./: Cargo.toml
.github/workflows/: test.yml
src/: client.rs  error.rs  lib.rs  search.rs
src/clients/: albums.rs  mod.rs
src/models/: album.rs  artist.rs  chart.rs  comment.rs  editorial.rs  genre.rs  infos.rs  mod.rs  options.rs  playlist.rs  radio.rs  track.rs  user.rs
src/models/album/: comments.rs  fans.rs  mod.rs  tracks.rs
src/models/search/: albums.rs  mod.rs
