[package]
name = "deezer"
description = "Provides a rust implementation of the Deezer Api"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
edition = "2018"
repository = "https://github.com/maxjoehnk/deezer-rs"
license = "MIT"

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/maxjoehnk/soundcloud-rs" }
is-it-maintained-open-issues = { repository = "https://github.com/maxjoehnk/soundcloud-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
thiserror = "1"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
